improvement to html

--- a/views/default/index.html
+++ b/views/default/index.html
@@ -6,8 +6,8 @@
 <div id="app">
     <div class="insert-movie">
         <input v-model="newMovieTitle" type="text" placeholder="Title"/><br><br>
-        <textarea v-model="newMovieDescription" placeholder="Describe the movie"></textarea><br><br>
-        <input v-model="newMovieRating" type="text" placeholder="Rate the movie"/><br><br>
+        <textarea v-model="newMovieDescription" placeholder="Description"></textarea><br><br>
+        <input v-model="newMovieRating" type="text" placeholder="Rating"/><br><br>
         <button v-on:click="submitMovie">Submit Movie</button>
     </div><br><br>
 
