--- a/views/default/index.html
+++ b/views/default/index.html
@@ -17,6 +17,7 @@
         <p>${ movie.title }</p>
         <p>${ movie.description }</p>
         <p>${ movie.rating }</p>
+        <button v-on:click="deleteMovie(movie.id)">Delete</button>
         </div>
     </div>
 </div>
